--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,87 +1,75 @@
 ﻿<Project>
-	<PropertyGroup>
-		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<!-- Microsoft.Extensions / Core Utilities -->
-		<PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
-		<PackageVersion Include="Microsoft.Extensions.Logging.Configuration" Version="10.0.1" />
-		<PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="10.1.0" />
-		<PackageVersion Include="Microsoft.Extensions.ServiceDiscovery.Yarp" Version="10.1.0" />
-		<PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="10.1.0" />
-
-		<!-- ASP.NET Core -->
-		<PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.1" />
-		<PackageVersion Include="Microsoft.AspNetCore.Authentication" Version="2.3.9" />
-		<PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.1" />
-		<PackageVersion Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="10.0.1" />
-		<PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
-		<PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.1" />
-
-		<!-- EF Core / Database -->
-		<PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
-		<PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.1" />
-		<PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.1" />
-		<PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.1" />
-		<PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
-		<PackageVersion Include="EFCore.NamingConventions" Version="10.0.0" />
-
-		<!-- Swashbuckle / OpenAPI -->
-		<PackageVersion Include="Swashbuckle.AspNetCore" Version="10.1.0" />
-		<PackageVersion Include="Swashbuckle.AspNetCore.SwaggerGen" Version="10.1.0" />
-		<PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="10.1.0" />
-		<PackageVersion Include="Microsoft.OpenApi" Version="3.1.2" />
-
-		<!-- Logging -->
-		<PackageVersion Include="Serilog" Version="4.3.0" />
-
-		<!-- OpenTelemetry / Observability -->
-		<PackageVersion Include="OpenTelemetry" Version="1.14.0" />
-		<PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.14.0" />
-		<PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.14.0" />
-		<PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.14.0" />
-		<PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.14.0" />
-		<PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.14.0" />
-
-		<!-- MassTransit -->
-		<PackageVersion Include="MassTransit" Version="9.0.0" />
-		<PackageVersion Include="MassTransit.RabbitMQ" Version="9.0.0" />
-		<PackageVersion Include="MassTransit.EntityFrameworkCore" Version="9.0.0" />
-
-		<!-- Testing -->
-		<PackageVersion Include="xunit" Version="2.9.3" />
-		<PackageVersion Include="xunit.runner.visualstudio" Version="3.1.5" />
-		<PackageVersion Include="FluentAssertions" Version="8.8.0" />
-		<PackageVersion Include="Moq" Version="4.20.72" />
-		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-		<PackageVersion Include="coverlet.collector" Version="6.0.4" />
-		<PackageVersion Include="Testcontainers" Version="4.10.0" />
-		<PackageVersion Include="Testcontainers.RabbitMq" Version="4.10.0" />
-		<PackageVersion Include="Testcontainers.Redis" Version="4.10.0" />
-		<PackageVersion Include="Testcontainers.PostgreSql" Version="4.10.0" />
-		<PackageVersion Include="MockQueryable.Moq" Version="10.0.1" />
-
-		<!-- Health Checks -->
-		<PackageVersion Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
-
-		<!-- Storage / AWS -->
-		<PackageVersion Include="AWSSDK.S3" Version="4.0.17" />
-
-		<!-- Aspire Hosting / Infrastructure -->
-		<PackageVersion Include="Aspire.Hosting.AppHost" Version="13.1.0" />
-		<PackageVersion Include="Aspire.Hosting.JavaScript" Version="13.1.0" />
-		<PackageVersion Include="Aspire.Hosting.RabbitMQ" Version="13.1.0" />
-		<PackageVersion Include="Aspire.Hosting.Redis" Version="13.1.0" />
-		<PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="13.1.0" />
-		<PackageVersion Include="Aspire.StackExchange.Redis.DistributedCaching" Version="13.1.0" />
-
-		<!-- Validation -->
-		<PackageVersion Include="FluentValidation" Version="12.1.1" />
-		<PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
-
-		<!-- Utilities / Misc -->
-		<PackageVersion Include="Scrutor" Version="7.0.0" />
-		<PackageVersion Include="BCrypt.Net-Next" Version="4.0.3" />
-	</ItemGroup>
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+  </PropertyGroup>
+  <ItemGroup>
+    <!-- Microsoft.Extensions / Core Utilities -->
+    <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Configuration" Version="10.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="10.1.0" />
+    <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery.Yarp" Version="10.1.0" />
+    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="10.1.0" />
+    <!-- ASP.NET Core -->
+    <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.1" />
+    <PackageVersion Include="Microsoft.AspNetCore.Authentication" Version="2.3.9" />
+    <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.1" />
+    <PackageVersion Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="10.0.1" />
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.1" />
+    <!-- EF Core / Database -->
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.1" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.1" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.1" />
+    <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
+    <PackageVersion Include="EFCore.NamingConventions" Version="10.0.0" />
+    <!-- Swashbuckle / OpenAPI -->
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="10.1.0" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerGen" Version="10.1.0" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="10.1.0" />
+    <PackageVersion Include="Microsoft.OpenApi" Version="3.1.2" />
+    <!-- Logging -->
+    <PackageVersion Include="Serilog" Version="4.3.0" />
+    <!-- OpenTelemetry / Observability -->
+    <PackageVersion Include="OpenTelemetry" Version="1.14.0" />
+    <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.14.0" />
+    <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.14.0" />
+    <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.14.0" />
+    <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.14.0" />
+    <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.14.0" />
+    <!-- MassTransit -->
+    <PackageVersion Include="MassTransit" Version="9.0.0" />
+    <PackageVersion Include="MassTransit.RabbitMQ" Version="9.0.0" />
+    <PackageVersion Include="MassTransit.EntityFrameworkCore" Version="9.0.0" />
+    <!-- Testing -->
+    <PackageVersion Include="xunit" Version="2.9.3" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.5" />
+    <PackageVersion Include="FluentAssertions" Version="8.8.0" />
+    <PackageVersion Include="Moq" Version="4.20.72" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+    <PackageVersion Include="coverlet.collector" Version="6.0.4" />
+    <PackageVersion Include="Testcontainers" Version="4.10.0" />
+    <PackageVersion Include="Testcontainers.RabbitMq" Version="4.10.0" />
+    <PackageVersion Include="Testcontainers.Redis" Version="4.10.0" />
+    <PackageVersion Include="Testcontainers.PostgreSql" Version="4.10.0" />
+    <PackageVersion Include="MockQueryable.Moq" Version="10.0.1" />
+    <!-- Health Checks -->
+    <PackageVersion Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
+    <!-- Storage / AWS -->
+    <PackageVersion Include="AWSSDK.S3" Version="4.0.17" />
+    <!-- Aspire Hosting / Infrastructure -->
+    <PackageVersion Include="Aspire.Hosting.AppHost" Version="13.1.0" />
+    <PackageVersion Include="Aspire.Hosting.JavaScript" Version="13.1.0" />
+    <PackageVersion Include="Aspire.Hosting.RabbitMQ" Version="13.1.0" />
+    <PackageVersion Include="Aspire.Hosting.Redis" Version="13.1.0" />
+    <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="13.1.0" />
+    <PackageVersion Include="Aspire.StackExchange.Redis.DistributedCaching" Version="13.1.0" />
+    <!-- Validation -->
+    <PackageVersion Include="FluentValidation" Version="12.1.1" />
+    <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
+    <!-- Utilities / Misc -->
+    <PackageVersion Include="Scrutor" Version="7.0.0" />
+    <PackageVersion Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.18.0.131500" />
+  </ItemGroup>
 </Project>
