--- a/.editorconfig
+++ b/.editorconfig
@@ -87,7 +87,7 @@ csharp_style_namespace_declarations= file_scoped:error
 
 # var preferences
 csharp_style_var_elsewhere = false:error
-csharp_style_var_for_built_in_types = false:error
+csharp_style_var_for_built_in_types = true:error
 csharp_style_var_when_type_is_apparent = true:error
 
 # Expression-bodied members
@@ -378,7 +378,7 @@ dotnet_diagnostic.CS9107.severity = none
 dotnet_diagnostic.IDE0005.severity = none
 
 # IDE0008: Use explicit type
-dotnet_diagnostic.IDE0008.severity = none
+#dotnet_diagnostic.IDE0008.severity = none
 
 # IDE0046: Convert to conditional expression
 dotnet_diagnostic.IDE0046.severity = none
