feat(courseservice): add support in gateway forward headers

--- a/Gateway.Api/appsettings.json
+++ b/Gateway.Api/appsettings.json
@@ -80,7 +80,11 @@
           "Path": "/api/courses/{**catch-all}"
         },
         "Transforms": [
-          { "PathRemovePrefix": "/api" }
+          { "PathRemovePrefix": "/api" },
+          {
+            "RequestHeader": "X-Forwarded-Prefix",
+            "Set": "/api"
+          }
         ]
       },
       "lessons-route": {
@@ -90,7 +94,11 @@
           "Path": "/api/lessons/{**catch-all}"
         },
         "Transforms": [
-          { "PathRemovePrefix": "/api" }
+          { "PathRemovePrefix": "/api" },
+          {
+            "RequestHeader": "X-Forwarded-Prefix",
+            "Set": "/api"
+          }
         ]
       },
       "s3-storage": {
