feat(courseservice): added required packages in order to add migration

--- a/src/CourseService/Web.Api/Courses.Api.csproj
+++ b/src/CourseService/Web.Api/Courses.Api.csproj
@@ -2,7 +2,9 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog" />
-	  <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
+	<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
+
   </ItemGroup>
 
   <ItemGroup>
