feat(courseservice): first working implementation using the new design

--- a/src/CourseService/Infrastructure/Courses.Infrastructure.csproj
+++ b/src/CourseService/Infrastructure/Courses.Infrastructure.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Application\Courses.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Database\Migrations\" />
+  </ItemGroup>
+
 </Project>
