feat(courseservice): added transcript digesting in the file event consumer

--- a/src/CourseService/Web.Api/Courses.Api.csproj
+++ b/src/CourseService/Web.Api/Courses.Api.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <PropertyGroup>
+    <UserSecretsId>ca52925b-3524-442a-9244-35830ffd4e83</UserSecretsId>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Serilog" />
 	<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
