--- a/src/StorageService/StorageService.csproj
+++ b/src/StorageService/StorageService.csproj
@@ -3,6 +3,7 @@
     <ItemGroup>
 	    <PackageReference Include="MassTransit.RabbitMQ" />
 		<PackageReference Include="AWSSDK.S3" />
+		<PackageReference Include="OpenAI" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
     </ItemGroup>
 	
