--- a/src/StorageService/StorageService.csproj
+++ b/src/StorageService/StorageService.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
+    <PropertyGroup>
+      <UserSecretsId>2e2182f5-85a6-40ea-8a7b-3aa0aa465a62</UserSecretsId>
+    </PropertyGroup>
+
     <ItemGroup>
 	    <PackageReference Include="MassTransit.RabbitMQ" />
 		<PackageReference Include="AWSSDK.S3" />
