feat(courseservice): updated the readdbcontext to support the course page read model

--- a/src/CourseService/Domain/Courses.Domain.csproj
+++ b/src/CourseService/Domain/Courses.Domain.csproj
@@ -4,4 +4,8 @@
     <ProjectReference Include="..\..\Shared\Kernel\Kernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Lessons\Events\" />
+  </ItemGroup>
+
 </Project>
