--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -46,6 +46,7 @@
     "react-markdown": "^10.1.0",
     "react-oidc-context": "^3.3.0",
     "react-router-dom": "^7.9.5",
+    "recharts": "^3.7.0",
     "rehype-raw": "^7.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
