refactor(Courseservice): code cleanup

--- a/src/CourseService/Application/Courses.Application.csproj
+++ b/src/CourseService/Application/Courses.Application.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Domain\Courses.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CourseRatings\Queries\" />
+  </ItemGroup>
+
 </Project>
